MASSIVE refactoring - fix entity, DTO, controller classes + tests to fit commonly agreed-upon logic